@@ -1,4 +1,4 @@
-EXE := Wilted-0-8-1-0
+EXE := Wilted-0-8-1-1
 #no evalfile yet
 ARCH := native
 SOURCES := src/*.cpp
