@@ -1,0 +1,14 @@
+// Driver Code for Wilted Datagen
+
+#include "Match.h"
+
+int main(int argc, char* argv[]){
+    //std::ofstream jj("x.txt");
+
+
+    for (int i = 0; i < 20; i++){
+        std::cout << Match::getDFRClayout() << '\n';
+    }
+
+    return 0;
+}
